--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.9",
+    "expo-av": "~12.0.4",
     "expo-document-picker": "~10.3.0",
+    "expo-file-system": "^14.1.0",
     "expo-font": "~10.2.0",
+    "expo-media-library": "^14.2.0",
+    "expo-permissions": "^13.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.10.0",
