--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.9",
     "expo-av": "~12.0.4",
+    "expo-dev-client": "~1.3.0",
     "expo-document-picker": "~10.3.0",
     "expo-file-system": "^14.1.0",
     "expo-font": "~10.2.0",
@@ -24,6 +25,7 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-element-textinput": "^2.0.1",
+    "react-native-google-mobile-ads": "^8.1.2",
     "react-native-pager-view": "5.4.24",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.3.1",
